# ArduinoRoboticArm

./: .gitignore  Arm.cpp  Arm.h  CMakeCache.txt  CMakeLists.txt  Constants.cpp  Constants.h  IKSolver.cpp  IKSolver.h  Makefile  Points.h  README.md  Servo.h  cmake_install.cmake  main.cpp  test.py
firmware/: BraccioBinary.ino
include/: Constants.h  Servo.h
scripts/: vision_controller.py
src/: Arm.cpp  Constants.cpp  IKSolver.cpp  main.cpp
